--- a/style.css
+++ b/style.css
@@ -57,7 +57,10 @@ p {
     font-family: 'Open Sans', sans-serif;
 
 }
-
+#project-four-p {
+    font-size: 14px;
+   
+}
 
 .aboutrow {
     background-color: white;
